--- a/css/style.scss
+++ b/css/style.scss
@@ -1,16 +1,31 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+$mainBackgroundColor: #EEE;
+$borderWidth: 3px;
+$mainBorderStyle: $borderWidth solid black;
+$separator: $borderWidth solid #888;
+
 /* GENERAL STYLES / LAYOUT */
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background: #AAA;
     font-family: 'Open Sans', sans-serif;
     font-size: 100%;
+    margin: 0;
     padding: 0;
+    border: $mainBorderStyle;
     min-width: 300px;
 }
 
-header {
-    height: 4rem;
-    margin-right: 2em;
+section {
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+ul {
+    padding: 0;
 }
 h1, h2, h3, p, ul {
     margin: 0;
@@ -23,34 +38,55 @@ nav {
         text-align: right;
     }
 }
-nav > ul > li {
+nav > ul > li,
+.social-wrapper > ul > li {
     display: inline-block;
 }
 
 /* MORE SPECIFIC STYLES */
+
+img {
+    &.round {
+        border-radius: 50%;
+    }
+    height: 200px;
+}
+
 a {
     text-decoration: none;
     color: inherit;
 }
-
 .jumbo {
-    border: 3px solid black;
-    background: #AAA;
-    padding: 2rem;
+    border-top: $mainBorderStyle;
+    background: $mainBackgroundColor;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
 }
 
-.txt-center {
-    text-align: center;
+
+.nav-btn,
+.social-btn {
+    padding: 1rem;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
-.nav-link {
-
+.nav-btn {
+    background: none;
+    border: none;
+    margin: 0 1em;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
-.nav-item {
-    color: white;
-    border: 3px solid white;
-    background: orange;
+i {
+    margin-right: 0.5em;
+}
+
+.social-wrapper {
+    margin-top: 1em;
 }
 
 .projects {
@@ -66,4 +102,32 @@ a {
 .item-wrapper {
     background: white;
     padding: 0.5em;
+}
+.pic-wrapper,
+.bio {
+    display: inline-block;
+    vertical-align: middle;
+}
+.about {
+    padding-left: 4em;
+    padding-right: 4em;
+}
+
+.bio {
+    text-align: left;
+    text-indent: 3em;
+    width: calc(66% - 15px);
+}
+
+.pic-wrapper {
+    width: calc(33% - 15px);
+    img {
+        display: block;
+        border-radius: 50%;
+        margin: 0 auto;
+    }
+}
+
+.txt-center {
+    text-align: center;
 }
