--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,15 @@
-.intro-footer {
-    position: absolute;
-    bottom: 0.5em;
-    left: 0.5em;
+body {
+  background: linear-gradient(
+      rgba(10%, 10%, 10%, 0.45),
+      rgba(10%, 10%, 10%, 0.45)
+    );
+  background:
+    linear-gradient(
+        rgba(10%, 10%, 10%, 0.45),
+        rgba(10%, 10%, 10%, 0.45)
+    ),
+    url('https://source.unsplash.com/R5fIqR8nPu0');
+  background-size: cover;
 }
 
 .section {
@@ -13,13 +21,6 @@
     font-size: 1.3em;
     width: 100%;
     height: 100%;
-    background:
-        linear-gradient(
-            rgba(75%, 75%, 75%, 0.45),
-            rgba(75%, 75%, 75%, 0.45)
-        ),
-        url('red-panda.jpg');
-    background-size: cover;
 }
 
 .navbar-default {
