--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,16 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<<<<<<< HEAD
-    <meta name="description" content="Evan Palmer's software / web development portfolio">
-=======
     <meta name="description" content="Evan Palmer's software and web development portfolio">
->>>>>>> 369e9e9e39866c182db5ee987939f8e8677a3562
     <meta name="author" content="Evan Palmer">
-    <title>Evan Palmer | Developer | Nerd | Code Enthusiast</title>
+    <title>Evan Palmer | Developer | Code Enthusiast</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">    <!-- Custom styles for this page -->
-    <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'homepage/styles.css' %}">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -59,7 +56,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img src="thumbnailraiseeffect.png" alt="The Raise Effect logo" class="img-responsive" />
+                    <img src="{% static 'homepage/thumbnailraiseeffect.png' %}" alt="The Raise Effect logo" class="img-responsive" />
                     <div class="caption">
                         <h4>Raise Effect API</h4>
                         <p>
@@ -75,7 +72,7 @@
 
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img src="bluepython.svg" alt="The PyDX blue python logo" />
+                    <img src="{% static 'homepage/bluepython.svg' %}" alt="The PyDX blue python logo" />
                     <div class="caption">
                         <h4>Speaker at PyDX 2015</h4>
                         <p>
@@ -91,7 +88,7 @@
 
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img class="intramusical-thumbnail" src="im_exercise.jpg" alt="Screenshot of intramusical exercise page" />
+                    <img class="intramusical-thumbnail" src="{% static 'im_exercise.jpg' %}" alt="Screenshot of intramusical exercise page" />
                     <div class="caption">
                         <h4>Raise Effect API</h4>
                         <p>
@@ -120,6 +117,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="main.js" charset="utf-8"></script>
+    <script src="{% static 'homepage/main.js' %}" charset="utf-8"></script>
   </body>
 </html>
