update styles, add images in images directory

--- a/portfolio/homepage/static/homepage/styles.scss
+++ b/portfolio/homepage/static/homepage/styles.scss
@@ -1,4 +1,6 @@
+$break-small: 320px;
 body {
+  color: white;
   background: linear-gradient(
       rgba(10%, 10%, 10%, 0.45),
       rgba(10%, 10%, 10%, 0.45)
@@ -8,10 +10,18 @@ body {
         rgba(10%, 10%, 10%, 0.45),
         rgba(10%, 10%, 10%, 0.45)
     ),
-    url('https://source.unsplash.com/R5fIqR8nPu0');
+    url('https://source.unsplash.com/R5fIqR8nPu0')
+    no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+}
 
-$break-small: 320px;
+h3 {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
 
 .intro-footer {
     position: absolute;
@@ -24,7 +34,6 @@ $break-small: 320px;
 }
 
 .full-width {
-    color: white;
     font-size: 1.3em;
     width: 100%;
     height: 100%;
