--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -44,9 +44,9 @@
     </nav>
     <div class="container text-center intro-bio">
         <h1>Hello! I'm Evan.</h1>
-        <p>I write code for the thrill of it.</p>
-        <p>I love the modern web and the challenges it brings.</p>
-        <p>I think building things with code is almost like having superpowers.</p>
+        <p>For me, building things with code is like a superpower.</p>
+        <p>I'm a problem-solver at heart and infinitely curious about how things work.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
     </div>
 </div>
 
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img src="{% static 'homepage/thumbnailraiseeffect.png' %}" alt="The Raise Effect logo" class="img-responsive" />
+                    <img src="{% static 'homepage/images/thumbnailraiseeffect.png' %}" alt="The Raise Effect logo" class="img-responsive" />
                     <div class="caption">
                         <h4>Raise Effect API</h4>
                         <p>
@@ -72,7 +72,7 @@
 
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img src="{% static 'homepage/bluepython.svg' %}" alt="The PyDX blue python logo" />
+                    <img src="{% static 'homepage/images/bluepython.svg' %}" alt="The PyDX blue python logo" />
                     <div class="caption">
                         <h4>Speaker at PyDX 2015</h4>
                         <p>
@@ -88,7 +88,7 @@
 
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img class="intramusical-thumbnail" src="{% static 'im_exercise.jpg' %}" alt="Screenshot of intramusical exercise page" />
+                    <img class="intramusical-thumbnail" src="{% static 'homepage/images/im_exercise.jpg' %}" alt="Screenshot of intramusical exercise page" />
                     <div class="caption">
                         <h4>Raise Effect API</h4>
                         <p>
@@ -106,7 +106,7 @@
     </div>
 </div>
 <p>
-    Photo by Scott Webb, source:
+    Background image by Scott Webb, source:
     <a href="https://unsplash.com/photos/R5fIqR8nPu0">
         https://unsplash.com/photos/R5fIqR8nPu0
     </a>
