revise intro-bio and add dummy rows to project gallery

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -44,15 +44,62 @@
     </nav>
     <div class="container text-center intro-bio">
         <h1>Hello! I'm Evan.</h1>
-        <p>For me, building things with code is like a superpower.</p>
-        <p>I'm a problem-solver at heart and infinitely curious about how things work.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+        <p>I'm a problem-solver at heart and infinitely curious about how things work,</p>
+        <p>and a generalist that relishes technologies old and new.</p>
     </div>
 </div>
 
 <div class="container section">
     <div id="projects">
         <h3 class="text-center">Projects</h3>
+        <div class="row">
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img src="{% static 'homepage/images/thumbnailraiseeffect.png' %}" alt="The Raise Effect logo" class="img-responsive" />
+                    <div class="caption">
+                        <h4>Raise Effect API</h4>
+                        <p>
+                          The Python REST API that powers Hack Oregon's "Raise Effect" project.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source on GitHub</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img src="{% static 'homepage/images/bluepython.svg' %}" alt="The PyDX blue python logo" />
+                    <div class="caption">
+                        <h4>Speaker at PyDX 2015</h4>
+                        <p>
+                          Talk description goes here.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View PyDX Website</a>
+                            <a href="#" class="btn btn-default" role="button">View Slides on Google Slides</a>
+                            <a href="#" class="btn btn-default" role="button">View Source on GitHub</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img class="intramusical-thumbnail" src="{% static 'homepage/images/im_exercise.jpg' %}" alt="Screenshot of intramusical exercise page" />
+                    <div class="caption">
+                        <h4>Intramusical</h4>
+                        <p>
+                          An interval identification quiz for musicians, built with Django and Tone.js. My first Django application.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div> {# end .row #}
         <div class="row">
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
@@ -69,7 +116,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
                     <img src="{% static 'homepage/images/bluepython.svg' %}" alt="The PyDX blue python logo" />
@@ -85,7 +131,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
                     <img class="intramusical-thumbnail" src="{% static 'homepage/images/im_exercise.jpg' %}" alt="Screenshot of intramusical exercise page" />
@@ -101,9 +146,60 @@
                     </div>
                 </div>
             </div>
+        </div> {# end .row #}
+        <div class="row">
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img src="{% static 'homepage/images/thumbnailraiseeffect.png' %}" alt="The Raise Effect logo" class="img-responsive" />
+                    <div class="caption">
+                        <h4>Raise Effect API</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img src="{% static 'homepage/images/bluepython.svg' %}" alt="The PyDX blue python logo" />
+                    <div class="caption">
+                        <h4>Speaker at PyDX 2015</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img class="intramusical-thumbnail" src="{% static 'homepage/images/im_exercise.jpg' %}" alt="Screenshot of intramusical exercise page" />
+                    <div class="caption">
+                        <h4>Raise Effect API</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div> {# end .row #}
+    </div> {# end .projects #}
+</div>
+<div class="container section">
+  <div class="about-contact">
 
-        </div>
-    </div>
+  </div>
 </div>
 <p>
     Background image by Scott Webb, source:
