--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="Evan Palmer">
 
-    <title>Evan Palmer | Developer</title>
+    <title>Evan Palmer | Web Developer</title>
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'homepage/sb-portfolio-1.0.4/css/bootstrap.min.css' %}" rel="stylesheet">
 
@@ -61,10 +61,10 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <h1 class="main-title">Evan Palmer</h1>
+            <p class="subtitle">Web Developer</p>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <a href="#about" class="btn btn-dark btn-lg">Blah</a>
         </div>
     </header>
 
@@ -73,8 +73,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                    <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                    <h2>I need to put some stuff here!</h2>
+                    <p class="lead">This is a class='lead' paragraph</p>
                 </div>
             </div>
             <!-- /.row -->
