--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -60,25 +60,12 @@
         <div class="text-vertical-center">
             <h1 class="main-title">Evan Palmer</h1>
             <p class="subtitle">Web Developer</p>
-            <br>
+            <h2>I need to put some stuff here!</h2>
+            <p class="lead">This is a class='lead' paragraph</p>
         </div>
     </header>
 
-    <!-- About -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>I need to put some stuff here!</h2>
-                    <p class="lead">This is a class='lead' paragraph</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Services -->
+    <!-- Skills -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
     <section id="skills" class="skills bg-primary">
         <div class="container">
