change portfolio images to thumbnails with captions

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -148,31 +148,43 @@
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="portfolio-item">
+                            <div class="portfolio-item thumbnail">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-1.jpg' %}">
                                 </a>
+                                <div class="caption">
+                                  This is the caption.
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="portfolio-item">
+                            <div class="portfolio-item thumbnail">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-2.jpg' %}">
                                 </a>
+                                <div class="caption">
+                                  This is the caption.
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="portfolio-item">
+                            <div class="portfolio-item thumbnail">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-3.jpg' %}">
                                 </a>
+                                <div class="caption">
+                                  This is the caption.
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="portfolio-item">
+                            <div class="portfolio-item thumbnail">
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-4.jpg' %}">
                                 </a>
+                                <div class="caption">
+                                  This is the caption.
+                                </div>
                             </div>
                         </div>
                     </div>
