--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -154,6 +154,10 @@
                                 </a>
                                 <div class="caption">
                                   This is the caption.
+                                  <div class="btn-group">
+                                    <button class="btn btn-default" type="button" name="button">View Site</button>
+                                    <button class="btn btn-primary" type="button" name="button">View Source</button>
+                                  </div>
                                 </div>
                             </div>
                         </div>
