--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -152,11 +152,11 @@
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-1.jpg' %}">
                                 </a>
-                                <div class="caption">
-                                  This is the caption.
-                                  <div class="btn-group">
+                                <div>
+                                  <p class="caption">This is the caption.</p>
+                                  <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Site</button>
-                                    <button class="btn btn-primary" type="button" name="button">View Source</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source</button>
                                   </div>
                                 </div>
                             </div>
@@ -166,8 +166,12 @@
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-2.jpg' %}">
                                 </a>
-                                <div class="caption">
-                                  This is the caption.
+                                <div>
+                                  <p class="caption">This is the caption.</p>
+                                  <div class="btn-group" role="group" aria-label="thumbnail-button-group">
+                                    <button class="btn btn-default" type="button" name="button">View Site</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source</button>
+                                  </div>
                                 </div>
                             </div>
                         </div>
@@ -176,8 +180,12 @@
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-3.jpg' %}">
                                 </a>
-                                <div class="caption">
-                                  This is the caption.
+                                <div>
+                                  <p class="caption">This is the caption.</p>
+                                  <div class="btn-group" role="group" aria-label="thumbnail-button-group">
+                                    <button class="btn btn-default" type="button" name="button">View Site</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source</button>
+                                  </div>
                                 </div>
                             </div>
                         </div>
@@ -186,8 +194,12 @@
                                 <a href="#">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-4.jpg' %}">
                                 </a>
-                                <div class="caption">
-                                  This is the caption.
+                                <div>
+                                  <p class="caption">This is the caption.</p>
+                                  <div class="btn-group" role="group" aria-label="thumbnail-button-group">
+                                    <button class="btn btn-default" type="button" name="button">View Site</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source</button>
+                                  </div>
                                 </div>
                             </div>
                         </div>
