edit contact section, add some real contact info, remove address

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -232,12 +232,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
-                    </h4>
-                    <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                    <h4><strong>Evan Palmer</strong></h4>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:evan@evanpalmer.net">evan@evanpalmer.net</a>
                         </li>
                     </ul>
                     <br>
@@ -249,11 +247,14 @@
                             <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="text-muted">Copyright &copy; Evan Palmer 2016</p>
+                    <p>
+                      <a href="#">About this site</a>
+                    </p>
                 </div>
             </div>
         </div>
