add raiseeffect thumbnail image and description

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -154,14 +154,16 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item thumbnail">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-1.jpg' %}">
+                                <a href="https://raiseeffect.org">
+                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/images/re-lg-thumbnail.png' %}">
                                 </a>
                                 <div>
-                                  <p class="caption">This is the caption.</p>
+                                  <p class="caption">
+                                    I helped build the Python API that powers <a href="https://raiseeffect.org">raiseeffect.org</a>.
+                                  </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
-                                    <button class="btn btn-default" type="button" name="button">View Site</button>
-                                    <button class="btn btn-default" type="button" name="button">View Source</button>
+                                    <button class="btn btn-default" type="button" name="button">View API Documentation</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source Code</button>
                                   </div>
                                 </div>
                             </div>
