--- a/portfolio/homepage/static/homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css
+++ b/portfolio/homepage/static/homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css
@@ -1,4 +1,5 @@
 /*!
+ * Styles based on:
  * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
@@ -202,6 +203,14 @@ hr.small {
     margin-bottom: 30px;
 }
 
+.portfolio-item-heading {
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  margin: 0.5em;
+  margin-bottom: 0.2em;
+  padding: 0;
+}
 .img-portfolio {
     margin: 0 auto;
 }
