--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -18,8 +18,6 @@
     <link href="{% static 'homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css' %}" rel="stylesheet">
 
     <!-- Calendar CSS -->
-    {# <link href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css" rel="stylesheet"> #}
-    <!-- Calendar CSS -->
     <link href="{% static 'homepage/github-calendar.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -154,16 +152,18 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item thumbnail">
-                                <a href="https://raiseeffect.org">
+                                <a href="http://raiseeffect.org" target="_blank">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/images/re-lg-thumbnail.png' %}">
                                 </a>
                                 <div>
-                                  <p class="caption">
-                                    I helped build the Python API that powers <a href="https://raiseeffect.org">raiseeffect.org</a>.
+                                  <h3 class="portfolio-item-heading">Raise Effect API</h3>
+                                  <p class="portfolio-item-text">
+                                    The Python REST API that powers <a target="_blank" href="http://raiseeffect.org/">raiseeffect.org</a>,
+                                    a <a href="http://www.hackoregon.org/">Hack Oregon</a> open-source project.
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
-                                    <button class="btn btn-default" type="button" name="button">View API Documentation</button>
-                                    <button class="btn btn-default" type="button" name="button">View Source Code</button>
+                                    <a href="https://github.com/Jobs-Economy/backend" class="btn btn-default">View Source Code &amp; Docs</a>
+                                    <a href="" class="btn btn-default">More Details</a>
                                   </div>
                                 </div>
                             </div>
@@ -171,10 +171,11 @@
                         <div class="col-md-6">
                             <div class="portfolio-item thumbnail">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-2.jpg' %}">
+                                    <img class="img-portfolio img-responsive" src="{% static 'homepage/images/im_exercise.jpg' %}">
                                 </a>
                                 <div>
-                                  <p class="caption">This is the caption.</p>
+                                  <h3 class="portfolio-item-heading">Intramusical</h3>
+                                  <p>A Python/Django application that generates interval identification exercises for musicians using the Web Audio API.</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Site</button>
                                     <button class="btn btn-default" type="button" name="button">View Source</button>
