change thumbnail buttons to 'View Source' and 'About'

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -162,8 +162,8 @@
                                     a <a href="http://www.hackoregon.org/">Hack Oregon</a> open-source project.
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
-                                    <a href="https://github.com/Jobs-Economy/backend" class="btn btn-default">View Source Code &amp; Docs</a>
-                                    <a href="" class="btn btn-default">More Details</a>
+                                    <a href="https://github.com/Jobs-Economy/backend" class="btn btn-default">View Source</a>
+                                    <a href="" class="btn btn-default">About</a>
                                   </div>
                                 </div>
                             </div>
@@ -177,8 +177,8 @@
                                   <h3 class="portfolio-item-heading">Intramusical</h3>
                                   <p>A Python/Django application that generates interval identification exercises for musicians using the Web Audio API.</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
-                                    <button class="btn btn-default" type="button" name="button">View Site</button>
-                                    <button class="btn btn-default" type="button" name="button">View Source</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source Code</button>
+                                    <button class="btn btn-default" type="button" name="button">About</button>
                                   </div>
                                 </div>
                             </div>
@@ -191,8 +191,8 @@
                                 <div>
                                   <p class="caption">This is a test.</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
-                                    <button class="btn btn-default" type="button" name="button">View Site</button>
-                                    <button class="btn btn-default" type="button" name="button">View Source</button>
+                                    <button class="btn btn-default" type="button" name="button">View Source Code</button>
+                                    <button class="btn btn-default" type="button" name="button">About</button>
                                   </div>
                                 </div>
                             </div>
@@ -205,8 +205,8 @@
                                 <div>
                                   <p class="caption">This is the caption.</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
-                                    <button class="btn btn-default" type="button" name="button">View Site</button>
                                     <button class="btn btn-default" type="button" name="button">View Source</button>
+                                    <button class="btn btn-default" type="button" name="button">About</button>
                                   </div>
                                 </div>
                             </div>
