--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -189,7 +189,7 @@
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-3.jpg' %}">
                                 </a>
                                 <div>
-                                  <p class="caption">This is a test.</p>
+                                  <p class="caption">Can I Eat This?</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source Code</button>
                                     <button class="btn btn-default" type="button" name="button">About</button>
