hide calendar on small screens, show alternate content

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -233,11 +233,12 @@
                 </div>
 
                 <!-- Prepare a container for your calendar. -->
-                <div class="calendar">
+                <div class="calendar hidden-xs hidden-sm">
                     <!-- Loading stuff -->
                     Loading the data just for you.
                 </div>
-
+                <div class="text-center small-device-info visible-xs visible-sm">
+                  <p>Your screen is too small to view the GitHub Calendar. Please visit <a class="github-link" href="https://github.com/palmerev" target="_blank">my GitHub profile</a> to see my contributions.</p>
                 </div>
             </div>
         </div>
