--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -203,7 +203,7 @@
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/sb-portfolio-1.0.4/img/portfolio-4.jpg' %}">
                                 </a>
                                 <div>
-                                  <p class="caption">This is the caption.</p>
+                                  <p class="caption">JavaPic</p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
                                     <button class="btn btn-default" type="button" name="button">View Source</button>
                                     <button class="btn btn-default" type="button" name="button">About</button>
